# argus-zig

./: .gitignore  AGENTS.md  BUILD.md  CAMERA_DETECTION.md  CMakeLists.txt  COMPARISON.md  DASHBOARD_MAP.md  DETECTION.md  DETECTION_STATUS.md  FIXES.md  HARDWARE_TEST.md  LAYERS_1_2.md  LICENSE  LORA_DIAGNOSTIC_PLAN.md  MESH_IMPROVEMENTS.md  MULTI_BOARD.md  README.md  RESOURCES.md  ROADMAP.md  STINGRAY.md  TDECK_EXPANSION.md  TRACKER_EVICTION_PLAN.md  WEB_FLASHER.md  build-zig.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.tdeck
.github/workflows/: pages.yml
.hermes/plans/: 2025-06-24_deployment-clustering-analysis.md  2025-06-24_general-codebase-improvements.md
docs/: POLICE_RF_SIGNATURES.md
main/: CMakeLists.txt  ble.c  config.c  gps.c  httpd.c  keyboard.c  lora.c  main.c  ota.c  sdcard.c  speaker.c  spiffs.c  tft.c  wifi.c
src/: analysis.zig  api.zig  build.zig  config.zig  display.zig  main.zig  mesh.zig  ouis.txt  scanner.zig
src/boards/: board.zig  heltec_v3.zig  heltec_v3_ui.zig  tdeck.zig  tdeck_ui.zig
src/hal/: button.zig  gfx.zig  led.zig  ssd1306.zig  st7789.zig
tools/: build-all.sh  nimble_ref_sdkconfig.txt  patch-sdkconfig.py  release.sh
web/: ble.html  dashboard.html  flash.html  setup.html
web/firmware/: manifest.json
web/firmware/heltec-v3/: manifest.json
web/firmware/tdeck/: manifest.json
